--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-aiohttp==3.9.1
-aiosqlite==0.19.0
-discord.py==2.3.2
-humanize==4.9.0
-python-dotenv==1.0.1
-pytz==2023.3
-rich==13.7.0
+aiosqlite
+discord.py
+httpx
+humanize
+pytest
+python-dotenv
+PyYAML
+rich
+typing_extensions
