Add DEFAULT_COLOR to env

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,10 @@
 BOT_TOKEN =
 
 # Guild ID to sync commands.
-GUILD_ID = 
+GUILD_ID =
 
 # Debug. true or false, 1 or 0.
 DEBUG = false
+
+# Default color used in bot embeds.
+DEFAULT_COLOR = 0x2563EB
